[package]
name = "hello-rgb"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
microbit-v2 = "0.16.0"
panic-rtt-target = "0.2"
rtt-target = "0.6"

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
